# befunge-editor

./: .gitignore  CNAME  Cargo.toml  README.md  Trunk.toml  befunge_editor-f0e7c458ba624703.js  befunge_editor-f0e7c458ba624703_bg.wasm  befunge_editor.js  befunge_editor_bg.wasm  flake.nix  index.html  version.json
.github/workflows/: rust.yml
assets/: sw.js
bf_programs/: Smile.b93  Windmill.b93
src/: app.rs  befunge.rs  befunge93.rs  befunge93mini.rs  lib.rs  main.rs
