[package]
name = "befunge_editor"
version = "0.1.0"
authors = ["PartyWumpus <evie@partywump.us>"]
edition = "2024"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.32.2"
eframe = { version = "^0.32", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
log = "0.4.27"
# You only need serde if you want app persistence:
serde = { version = "1.0.219", features = ["derive"] }
clipline = "0.3.0"
coarsetime = "0.1.36"
rfd = "0.15.3"
futures = "0.3.31"
thiserror = "2.0.15"
include_dir = "0.7.4"

# in theory these can be removed from the web build
puffin_egui = { git = "https://github.com/EmbarkStudios/puffin.git" } 
puffin = { git = "https://github.com/EmbarkStudios/puffin.git" } 


# native:
#[target.'cfg(not(target_arch = "wasm32"))']
#rustflags = "-C target-cpu=native"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.5.37", features = ["derive"] }
env_logger = "0.11.8"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"              # to access the DOM (to hide the loading text)




[profile.release]
lto="fat"
strip=true

[profile.dev]
opt-level = 2
overflow-checks = false

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 3
strip = "debuginfo"
